Fixed some overlaps when extending/making the screen smaller or bigger in the calender

--- a/src/CalenderPage/Calender/Calendar.module.css
+++ b/src/CalenderPage/Calender/Calendar.module.css
@@ -3,14 +3,11 @@
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
-  }
+    cursor: pointer;
+}
   
-  .customCalendar {
-    width: 100%;
-    font-family: Arial, sans-serif;
-  }
-  
-  .eventContent {
+.eventContent {
+    font-size: 0.75rem;
     display: flex;
     justify-content: center;
     align-items: center;
